# api.zlendy.com

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
bruno/umami-analytics/: bruno.json  expanded multiple.bru  expanded single.bru  login.bru
bruno/umami-analytics/environments/: Prod.bru
src/: args.rs  errors.rs  fediverse.rs  main.rs  umami.rs
src/routes/: blog.rs  hello.rs
