[package]
name = "api-zlendy-com"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
dotenvy = { version = "0.15.7" }
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6.6", features = ["compression-full", "limit"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
