[package]
name = "api-zlendy-com"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
dotenvy = { version = "0.15.7" }
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6.8", features = ["compression-full", "limit"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
